Bug 154599 - Crash while moving columns in Writer table
Summary: Crash while moving columns in Writer table
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.3.1.3 release
Hardware: x86-64 (AMD64) Linux (All)
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0 target:7.5.3 target:7.4.7
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Writer-Tables Crash
  Show dependency treegraph
 
Reported: 2023-04-04 10:42 UTC by Aleksandr
Modified: 2023-04-24 07:56 UTC (History)
4 users (show)

See Also:
Crash report or crash signature: ["sw::IsMarkHidden(SwRootFrame const&, sw::mark::IMark const&)"]


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aleksandr 2023-04-04 10:42:44 UTC
Description:
When dragging a selected columns, the Writer crashes. The drop occurs only if the column was highlighted with an arrow above the top cell (↓).

Steps to Reproduce:
1. Insert a 5x5 table
2. Lead the entire first column with an arrow on the top cell
3. Drag the selected columns to the second columns

Actual Results:
LibreWriter crash

Expected Results:
Columns moved


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 7.5.2.2 (X86_64) / LibreOffice Community
Build ID: 50(Build:2)
CPU threads: 6; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: en-US (en_US); UI: en-US
Ubuntu package version: 4:7.5.2~rc2-0ubuntu0.22.04.1~lo1
Calc: threaded
Comment 1 Xisco Faulí 2023-04-04 11:24:50 UTC
Reproduced in

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 53946b0698d63849266f465c16386dd8e9319f19
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 2 Xisco Faulí 2023-04-04 13:26:02 UTC
Also reproduced in

Version: 7.4.0.0.alpha1+ / LibreOffice Community
Build ID: c94961c6869c34b3874d21cfaa5ec1488609acfe
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 3 Stéphane Guillou (stragu) 2023-04-04 14:27:38 UTC
Crash reports:
- 7.3: https://crashreport.libreoffice.org/stats/crash_details/b4c9f671-416b-4405-a039-34f25df78556
- 7.4: https://crashreport.libreoffice.org/stats/crash_details/96e0ef62-fa6e-44b4-aa25-78241a45e517

Bibisected with linux-64-7.3 repository to first bad commit 797e0cb9201a7324ed0584212effdbe1c4711c4a which points to core commit e16d7e193313d2e479aed3536f564649313eff5e which is a cherrypick of:

commit 5e8aa259e48d5602b932353bb146ebb523982cf2
author	László Németh <nemeth@numbertext.org>	Mon Jan 24 17:37:09 2022 +0100
committer	László Németh <nemeth@numbertext.org>	Tue Jan 25 12:18:23 2022 +0100
tdf#146967 sw table: fix freezing in Hide Changes mode
Regression from commit 5a1c19624eda0c8b847af0dcee70b82502578ceb.
Follow-up to commit 5a1c19624eda0c8b847af0dcee70b82502578ceb
tdf#146965 sw track changes: fix tracked table row moving
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/128875

László, can you please have a look?
Comment 4 Commit Notification 2023-04-08 08:54:34 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/912336f3c85d9a631fa0ac0f270bab04b204f619

tdf#154599 sw: fix crash at drag & drop table columns

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-04-08 19:10:26 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/2da73834efd635213821c40b84067b751b2d8e61

tdf#154599 sw: fix crash at drag & drop table columns

It will be available in 7.5.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Aleksandr 2023-04-10 07:36:51 UTC
Crash is fixed. But the contents of the cells don't move when you move a column to the adjacent right column.
Comment 7 Xisco Faulí 2023-04-10 08:36:52 UTC
(In reply to Aleksandr from comment #6)
> Crash is fixed. But the contents of the cells don't move when you move a
> column to the adjacent right column.

I can't reproduce it in

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 60bce1af8aab2115d603781193bb659b35d1aedb
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

OTOH, I do confirm the crash is resolved
Comment 8 Commit Notification 2023-04-10 16:53:08 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/6e6398764945045876176262f54dac6785890385

tdf#154599 sw: fix crash at drag & drop table columns

It will be available in 7.4.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 László Németh 2023-04-11 13:25:33 UTC
(In reply to Aleksandr from comment #6)
> Crash is fixed. But the contents of the cells don't move when you move a
> column to the adjacent right column.

The columns moved before the target column. But it seems, there is no Paste Special option to move the column after the last column by Cut & Paste, only inserting an empty column before that.
Comment 10 László Németh 2023-04-11 13:26:14 UTC
@Aleksandr & al.: many thanks for the bug report and feedback!
Comment 11 NISZ LibreOffice Team 2023-04-24 07:56:38 UTC
VERIFIED IN:
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 006b35d50024b1932d84380b5d2fec1f7066bccd
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL threaded