tdf#154599 sw: fix crash at drag & drop table columns

New code path for (tracked) row deletion resulted broken
column deletion, by deleting more columns at their
drag & drop, than needed.

Regression from commit 5e8aa259e48d5602b932353bb146ebb523982cf2
"tdf#146967 sw table: fix freezing in Hide Changes mode".

Change-Id: Ib649f5b534a588d192d27757e30c8f81087beb0a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150132
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit 491e84eb7c6d92c44ab7fa62912452f7789bb8c8)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150145